Compilation backport error